--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,18 +8,26 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.iassistant.android.App"
         android:theme="@style/AppTheme">
-        <activity android:name=".HelloAndroidActivity" >
+        <activity android:name="com.iassistant.android.ui.HelloAndroidActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.iassistant.android.ui.RegisterActivity" android:label="Welcome"/>
     </application>
 
 </manifest>
