完成了从server trigger到获得ip, 注册等功能

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -28,6 +28,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.iassistant.android.ui.RegisterActivity" android:label="Welcome"/>
+        <activity android:name="com.iassistant.android.ui.DashboardActivity" android:label="dashboard"/>
+        <service android:name="com.iassistant.android.service.MessageService" android:label="messageService"/>
     </application>
 
 </manifest>
