--- a/android/pom.xml
+++ b/android/pom.xml
@@ -43,6 +43,26 @@
             <artifactId>httpclient-android</artifactId>
             <version>4.3.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.14.8</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pubnub</groupId>
+            <artifactId>pubnub</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
