增加了vnc的库和代码

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name="com.iassistant.android.ui.RegisterActivity" android:label="Welcome"/>
         <activity android:name="com.iassistant.android.ui.DashboardActivity" android:label="dashboard"/>
         <service android:name="com.iassistant.android.service.MessageService" android:label="messageService"/>
+        <service android:name=".service.VNCServerManagerService" android:label="vncserver"/>
     </application>
 
 </manifest>
